登录和注册页面

--- a/map/templates/map/index.html
+++ b/map/templates/map/index.html
@@ -26,6 +26,8 @@
         <!-- 地图面板 -->
         <!--底部状态栏部分 -->
       </div>
+
+      <button type="button" onclick="route()">find route</button>
     </div>
   </body>
 
