--- a/aedmap/templates/aedmap/index.html
+++ b/aedmap/templates/aedmap/index.html
@@ -1,13 +1,485 @@
 <!DOCTYPE html>
-{% load static %}
-
 <html lang="en">
-  <head>
-    <title>map</title>
-    <link href="/static/css/style.css" rel="stylesheet" />
-  </head>
 
-  <body>
-    <h1>perhaps we need a introductory video here</h1>
-  </body>
+<head>
+  <title>项目首页</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1" user-scalable="no">
+  <meta name="description" content="ECharts, a powerful, interactive charting and visualization library for browser">
+  <link rel="stylesheet" type="text/css" href="/static/css/bootstrap.min.css">
+  <style>
+    @font-face {
+      font-family: "iconfont";
+      src: url("font/iconfont.eot");
+      src: url("font/iconfont.eot?#iefix") format("embedded-opentype"),
+        url("font/iconfont.woff") format("woff"),
+        url("font/iconfont.ttf") format("truetype"),
+        url("font/iconfont.svg#iconfont") format("svg");
+    }
+
+    .iconfont {
+      font-family: "iconfont" !important;
+      speak: none;
+      font-style: normal;
+      font-weight: normal;
+      font-variant: normal;
+      text-transform: none;
+      -webkit-font-smoothing: antialiased;
+      -moz-osx-font-smoothing: grayscale;
+    }
+
+    html {
+      height: 100%;
+    }
+
+    body {
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+        "PingFang SC", "Microsoft YaHei", "Hiragino Sans GB", "Helvetica Neue",
+        Helvetica, Arial, sans-serif;
+    }
+
+    #lowie-main {
+      display: none;
+    }
+
+    .lower-ie #main {
+      display: none;
+    }
+
+    .lower-ie #lowie-main {
+      display: block;
+      height: 100%;
+      width: 100%;
+      padding: 200px 0 100px;
+      background-color: #2a3c54;
+    }
+
+    .lower-ie #lowie-main img {
+      display: block;
+      width: 60%;
+      margin: 0 auto;
+    }
+
+    .navbar-default {
+      border: none;
+      background-color: #40a7dc;
+      z-index: 10000;
+      -webkit-transition: background-color 0.5s linear;
+      -o-transition: background-color 0.5s linear;
+      transition: background-color 0.5s linear;
+      height: 50px;
+    }
+
+    .navbar-default .navbar-nav {
+      -webkit-transition: background-color 0.5s linear;
+      -o-transition: background-color 0.5s linear;
+      transition: background-color 0.5s linear;
+    }
+
+    .navbar-default .navbar-nav li {
+      position: relative;
+    }
+
+    .navbar-default .navbar-nav li a {
+      color: rgba(255, 255, 255, 0.45);
+      background-color: none !important;
+      padding: 15px 20px;
+      -webkit-transition: 0.5s background-color;
+      -o-transition: 0.5s background-color;
+      transition: 0.5s background-color;
+      font-size: 14px;
+    }
+
+    .navbar-default .navbar-nav li a:before {
+      content: "";
+      position: absolute;
+      left: 50%;
+      right: 50%;
+      top: 0;
+      background: #2e9fdc;
+      height: 4px;
+      -webkit-transition-property: "left, right";
+      -o-transition-property: "left, right";
+      transition-property: "left, right";
+      -webkit-transition-duration: 0.3s;
+      -o-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -webkit-transition-timing-function: ease-out;
+      -o-transition-timing-function: ease-out;
+      transition-timing-function: ease-out;
+    }
+
+    .navbar-default .navbar-nav li a:hover,
+    .navbar-default .navbar-nav li a:focus {
+      color: #000;
+      background-color: #2e9fdc;
+    }
+
+    .navbar-default .navbar-nav li a:hover:before,
+    .navbar-default .navbar-nav li a:focus:before {
+      left: 0;
+      right: 0;
+    }
+
+    .navbar-default .navbar-nav li a .iconfont {
+      font-size: 12px;
+    }
+
+    .navbar-default .navbar-nav li a .new {
+      display: inline-block;
+      padding: 2px 5px;
+      background-color: #2e9fdc;
+      color: #000;
+      font-size: 12px;
+      border-radius: 3px;
+      -webkit-transform: scale(0.65);
+      -ms-transform: scale(0.65);
+      transform: scale(0.65);
+    }
+
+    .navbar-default .navbar-nav li.open {
+      background-color: #2e9fdc;
+      color: #fff;
+    }
+
+    .navbar-default .navbar-nav li.open>a:focus,
+    .navbar-default .navbar-nav li.open>a:hover {
+      color: #eee;
+      background-color: #2e9fdc;
+    }
+
+    .navbar-default .navbar-nav li.active>a {
+      padding-top: 11px;
+      border-top: none;
+      color: #fff;
+      background-color: #2e9fdc;
+      -webkit-transition: 0.5s background-color;
+      -o-transition: 0.5s background-color;
+      transition: 0.5s background-color;
+    }
+
+    .navbar-default .navbar-nav li.active>a:before {
+      display: none;
+    }
+
+    .navbar-default .navbar-nav li.active>a:hover,
+    .navbar-default .navbar-nav li.active>a:focus {
+      color: #000;
+      background-color: #2e9fdc;
+    }
+
+    .navbar-default .navbar-nav li .dropdown-menu {
+      width: 210px;
+      padding: 0;
+      background-color: #2e9fdc;
+      -webkit-box-shadow: none;
+      box-shadow: none;
+      border: none;
+    }
+
+    .navbar-default .navbar-nav li .dropdown-menu li {
+      background-color: #2e9fdc;
+      border-top: none;
+      padding: 5px 0;
+    }
+
+    .navbar-default .navbar-nav li .dropdown-menu li a {
+      padding: 8px 20px;
+    }
+
+    .navbar-default .navbar-nav li .dropdown-menu li:hover,
+    .navbar-default .navbar-nav li .dropdown-menu li:focus {
+      background-color: #2e9fdc;
+    }
+
+    .navbar-default .navbar-nav li .dropdown-menu li:hover a,
+    .navbar-default .navbar-nav li .dropdown-menu li:focus a {
+      background-color: #2e9fdc;
+    }
+
+    .navbar-default .navbar-nav li ul a:before {
+      display: none;
+    }
+
+    .navbar-default .navbar-logo {
+      height: 32px;
+      margin-top: -6px;
+      margin-left: -2px;
+    }
+
+    .navbar-default .navbar-collapse {
+      border-top: none;
+    }
+
+    .navbar-default .navbar-toggle {
+      padding: 1px 5px;
+      margin: 7px 16px 0 0;
+      border-color: #384e6b;
+      background-color: #384e6b;
+    }
+
+    .navbar-default .navbar-toggle .icon-bar {
+      margin: 7px 0 !important;
+      height: 1px;
+      background-color: #fff;
+    }
+
+    .navbar-default .navbar-toggle:hover,
+    .navbar-default .navbar-toggle:focus {
+      border-color: #384e6b;
+      background-color: #384e6b;
+    }
+
+    #menu-btn {
+      display: none;
+      float: right;
+      height: 45px;
+      line-height: 45px;
+      margin: 5px 20px 0 0;
+      font-size: 30px;
+      color: #fff;
+      cursor: pointer;
+    }
+
+    .navbar-bg {
+      background-color: rgba(41, 60, 85, 0.1);
+      -webkit-transition-duration: 0.3s;
+      -o-transition-duration: 0.3s;
+      transition-duration: 0.3s;
+      -webkit-transition-property: opacity;
+      -o-transition-property: opacity;
+      transition-property: opacity;
+    }
+
+    .navbar-bg:hover {
+      opacity: 1;
+    }
+
+    .navbar-bg .navbar-nav li a {
+      color: #fff;
+    }
+
+    .navbar-bg .navbar-nav li.active a {
+      color: #fff;
+      background-color: transparent;
+    }
+
+    .navbar-bg .navbar-nav #nav-github {
+      opacity: 1;
+    }
+
+    #nav-github {
+      opacity: 0.4;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s;
+    }
+
+    #nav-login {
+      opacity: 0.4;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s;
+    }
+
+    #nav-register {
+      opacity: 0.4;
+      -webkit-transition: 0.5s;
+      -o-transition: 0.5s;
+      transition: 0.5s;
+    }
+
+    #nav-github img {
+      position: relative;
+      top: -1px;
+    }
+
+    #nav-github:hover {
+      opacity: 1;
+    }
+
+    @media (max-width: 768px) {
+      .navbar-default .navbar-nav {
+        background-color: #293c55;
+        -webkit-transition: background-color 0.5s linear;
+        -o-transition: background-color 0.5s linear;
+        transition: background-color 0.5s linear;
+        margin-top: 0;
+        margin-bottom: 0;
+      }
+
+      .navbar-default .navbar-nav .open .dropdown-menu {
+        padding: 0;
+      }
+
+      .navbar-default .navbar-nav .open .dropdown-menu li a {
+        color: #fff;
+      }
+
+      .navbar-default .navbar-nav li.active>a {
+        border-left: 4px solid #2e9fdc;
+        border-top: none;
+        padding: 10px 15px 10px 11px;
+      }
+
+      #menu-btn {
+        display: block;
+      }
+
+      #nav-download {
+        display: none;
+      }
+    }
+
+    @media (max-width: 992px) and (min-width: 768px) {
+      .navbar-default .navbar-nav li a {
+        padding: 15px 15px;
+      }
+    }
+
+    .question-container {
+      text-align: center;
+      width: auto;
+      /* background-color: blue; */
+      position: absolute;
+      top: 0px;
+      z-index: 20;
+      position: relative;
+    }
+
+    .gradient {
+      position: absolute;
+      z-index: -1;
+      top: -250px;
+      /* background-image: linear-gradient(to bottom, rgb(213, 221, 233), rgb(227, 233, 240), rgba(255, 245, 202, 0)); */
+      background-image: linear-gradient(to bottom,
+          rgb(172, 185, 204),
+          rgb(208, 216, 226),
+          rgba(255, 245, 202, 0));
+      background-image: linear-gradient(to bottom,
+          rgb(172, 191, 204),
+          rgb(208, 216, 226),
+          rgba(255, 245, 202, 0));
+      /* background-image: -webkit-linear-gradient(bottom, rgb(255, 209, 123), rgb(255, 243, 176), rgba(240, 240, 240, 0)); */
+      /* background-image: linear-gradient(to bottom, rgb(255, 209, 123), rgb(255, 243, 176), rgba(240, 240, 240, 0)); */
+      /* background-image: linear-gradient(to bottom, rgb(186, 203, 228), rgb(227, 233, 240), rgba(255, 245, 202, 0)); */
+      width: 100%;
+      height: 600px;
+      object-fit: cover;
+    }
+
+    .question {
+      display: grid;
+      grid-template-columns: repeat(1, 500px);
+      justify-content: center;
+      margin-top: 200px;
+      /* transform: translateX(-50%); */
+      /* padding: 1px; */
+      -webkit-animation: fadein 6s;
+      -moz-animation: fadein 6s;
+      -ms-animation: fadein 6s;
+      -o-animation: fadein 6s;
+      animation: fadein 6s;
+      /* background-color: rgb(247, 184, 14); */
+    }
+
+    .question-container {
+      text-align: center;
+      width: auto;
+      /* background-color: blue; */
+      position: absolute;
+      top: 0px;
+      z-index: 20;
+      position: relative;
+    }
+
+    .boxes {
+      display: inline-block;
+      margin-top: 500px;
+      max-width: 800px;
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-size: 17px;
+      text-align: left;
+      font-style: regular;
+      font-weight: 400;
+      /* color: rgb(55, 49, 77); */
+      color: rgb(37, 36, 39);
+      /* background-color: rgb(255, 181, 22); */
+    }
+
+    .box {
+      /* display: inline-block; */
+      width: 360px;
+      padding: 40px;
+    }
+  </style>
+  <script>window.EC_WWW_LANG = 'zh';
+  </script>
+
+
+
+
+
+
+</head>
+
+<body>
+  <nav role="navigation" class="navbar navbar-default navbar-fixed-top navbar-bg">
+    <div class="container-fluid">
+      <div id="navbar-collapse" class="collapse navbar-collapse">
+        <ul class="nav navbar-nav navbar-left">
+          <li id="nav-index" class="active"><a href="/map/2">地图</a></li>
+          <li id="nav-index" class="active"><a href="https://baidu.com">致谢</a></li>
+        </ul>
+        <ul class="nav navbar-nav navbar-right">
+          <li id="nav-github"><a href="https://github.com/gzliyu/AED-map" target="_blank"><img
+                src="/static/img/github.png" width="18"></a></li>
+          <li id="nav-github"><a href="https://weixin.qq.com/" target="_blank"><img src="/static/img/weixin.ico"
+                width="18"></a></li>
+          <li id="nav-github"><a href="https://bilibili.com" target="_blank"><img src="/static/img/bilibili.ico"
+                width="18"></a></li>
+          <li id="nav-github"><a href="https://weibo.com" target="_blank"><img src="/static/img/weibo.ico"
+                width="18"></a>
+          </li>
+          <li id="nav-github"><a id="nav-github" href="/login/register" target="_blank">注册</a></li>
+          <li id="nav-github"><a id="nav-github" href="/login/" target="_blank">登录</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+  <div class="question-container">
+    <div class="gradient"></div>
+    <div class="question">
+      <h2>中国有...台AED，它们在哪里？...背景现在需要一个介绍的视频，还有相关资料
+      </h2>
+    </div>
+    <div class="line-container">
+      <div class="line"></div>
+    </div>
+    <div class="boxes">
+      <div class="box">
+        <style>
+          p {
+            display: block;
+            margin-block-start: 1em;
+            margin-block-end: 1em;
+            margin-inline-start: 0px;
+            margin-inline-end: 0px;
+          }
+        </style>
+        <p>
+
+          我们做了什么.... 巴拉巴拉
+        </p>
+      </div>
+      <div class="box">
+        <p>
+          这个东西是干嘛的...巴拉巴拉
+        </p>
+      </div>
+    </div>
+  </div>
+</body>
+
 </html>
