--- a/aedmap/templates/aedmap/index.html
+++ b/aedmap/templates/aedmap/index.html
@@ -413,6 +413,285 @@
       width: 360px;
       padding: 40px;
     }
+
+    .box:nth-child(1) {
+      float: left;
+    }
+
+    .box:nth-child(2) {
+      padding-top: 320px;
+      float: right;
+    }
+
+    .oblique {
+      position: absolute;
+      margin-top: 270px;
+      margin-left: -10px;
+      left: 50%;
+      transform: rotate(-45deg);
+    }
+
+    .part2 .oblique {
+      margin-top: 250px;
+    }
+
+    .first {
+      margin-top: 290px;
+      transform: rotate(0deg);
+    }
+
+    @media only screen and (min-width: 1000px) {
+      .boxes {
+        margin-top: 600px;
+      }
+    }
+
+    @media only screen and (min-width: 1500px) {
+      .boxes {
+        margin-top: 700px;
+      }
+    }
+
+    @media only screen and (min-width: 2000px) {
+      .boxes {
+        margin-top: 850px;
+      }
+
+      h2 {
+        font-size: 42px;
+      }
+
+      .second_heading {
+        width: 650px;
+      }
+
+      .question {
+        grid-template-columns: repeat(1, 600px);
+      }
+    }
+
+    @media only screen and (min-width: 3000px) {
+      .boxes {
+        margin-top: 1050px;
+      }
+    }
+
+    @media only screen and (min-width: 4000px) {
+      .boxes {
+        margin-top: 1200px;
+      }
+
+      .h2 {
+        font-size: 48px;
+      }
+
+      .question {
+        grid-template-columns: repeat(1, 500px);
+      }
+    }
+
+    @media only screen and (max-width: 800px) {
+      .logo {
+        margin-left: 40px;
+        margin-top: 10px;
+      }
+
+      .logo #header_logo {
+        width: 182px;
+        height: auto;
+      }
+
+      h1 {
+        font-size: 22px;
+        max-width: 100px;
+        padding-top: 0px;
+        margin-top: 5px;
+        margin-right: 5px;
+        /* background-color: rgb(255, 147, 6); */
+      }
+
+      h2 {
+        font-size: 28px;
+      }
+
+      .question {
+        grid-template-columns: repeat(1, 400px);
+      }
+
+      .gradient {
+        height: 550px;
+      }
+
+      .second_heading {
+        width: 390px;
+      }
+
+      .boxes {
+        margin-top: 450px;
+        font-size: 17px;
+        font-weight: 400;
+        width: 360px;
+        padding: 0px;
+      }
+
+      .box {
+        width: auto;
+        padding: 40px;
+        margin: 5px;
+      }
+
+      .oblique {
+        margin-top: 340px;
+        transform: rotate(0deg);
+      }
+
+      .part2 .oblique {
+        margin-top: 250px;
+        transform: rotate(0deg);
+      }
+
+      /* one column code */
+      .box:nth-child(2) {
+        padding-top: 40px;
+        float: left;
+      }
+
+      .first {
+        margin-top: 340px;
+      }
+
+      .end {
+        top: 700px;
+      }
+
+      .logo_bottom {
+        margin-right: 0px;
+      }
+
+      .footer .team,
+      .footer .paper,
+      .footer .logo_bottom {
+        margin-left: 0px;
+        margin-right: 0px;
+        width: auto;
+      }
+    }
+
+    @media only screen and (max-width: 650px) {
+      .boxes {
+        margin-top: 400px;
+        width: 340px;
+        padding: 0px;
+      }
+
+      .question {
+        grid-template-columns: repeat(1, 260px);
+      }
+
+      .oblique {
+        margin-top: 350px;
+        transform: rotate(0deg);
+      }
+
+      .part2 .oblique {
+        margin-top: 275px;
+        transform: rotate(0deg);
+      }
+
+      .second_heading {
+        width: 290px;
+      }
+    }
+
+    .second_heading-container {
+      text-align: center;
+      width: auto;
+    }
+
+    .second_heading {
+      display: inline-block;
+      margin-top: 150px;
+      max-width: 750px;
+      /* background-color: rgb(247, 184, 14); */
+    }
+
+    @media only screen and (max-width: 1000px) {
+      .second_heading {
+        max-width: 550px;
+      }
+    }
+
+    .chart_heading-container {
+      text-align: center;
+      margin: 20 60;
+      /* margin-top: 20px; */
+      /* background-color: cadetblue; */
+    }
+
+    .chart_heading {
+      display: inline-block;
+      margin-top: 60px;
+      margin-left: 100px;
+      margin-right: 100px;
+      max-width: 680px;
+      margin-bottom: 10px;
+    }
+
+    @media only screen and (max-width: 800px) {
+      .chart_heading {
+        max-width: 360px;
+        margin-left: 20px;
+        margin-right: 20px;
+      }
+    }
+
+
+    /* @media only screen and (max-width: 650px) {
+    .chart_heading {
+        width: 200px;
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+} */
+
+    h5 {
+      text-align: center;
+      font-family: 'IBM Plex Sans', sans-serif;
+      font-size: 16px;
+      /* font-style: italic; */
+      font-weight: 400;
+      /* text-decoration: underline; */
+      color: rgb(40, 20, 10);
+      color: rgb(55, 49, 77);
+      color: rgb(179, 179, 179);
+    }
+
+    .line-container {
+      display: inline-block;
+      text-align: center;
+    }
+
+    h2 {
+      /*Question*/
+      text-align: center;
+      font-family: 'Manrope', sans-serif;
+      /* font-family: 'Source Sans Pro', sans-serif; */
+      font-size: 36px;
+      /* font-style: italic; */
+      font-weight: 650;
+      /* color: rgb(55, 49, 77); */
+      color: rgb(37, 36, 39);
+    }
+
+    .line {
+      display: inline-block;
+      width: 15px;
+      /* height: 47px; */
+      margin-top: 15px;
+      border-bottom: 6px solid rgb(255, 176, 5);
+      /* border-bottom: 6px solid rgb(255, 185, 34); */
+      /* border-bottom: 6px solid rgb(255, 198, 40); */
+    }
   </style>
   <script>window.EC_WWW_LANG = 'zh';
   </script>
@@ -459,17 +738,8 @@
     </div>
     <div class="boxes">
       <div class="box">
-        <style>
-          p {
-            display: block;
-            margin-block-start: 1em;
-            margin-block-end: 1em;
-            margin-inline-start: 0px;
-            margin-inline-end: 0px;
-          }
-        </style>
         <p>
-
+          左右分块
           我们做了什么.... 巴拉巴拉
         </p>
       </div>
