--- a/login/templates/login/index.html
+++ b/login/templates/login/index.html
@@ -36,7 +36,7 @@
       <div class="wrap-login100">
         <form class="login100-form validate-form">
           <span class="login100-form-logo">
-            <i class="zmdi zmdi-landscape"></i>
+            <i class="zmdi zmdi-pin"></i>
           </span>
 
           <span class="login100-form-title p-b-34 p-t-27">
