--- a/login/templates/login/register.html
+++ b/login/templates/login/register.html
@@ -36,7 +36,7 @@
             <div class="wrap-login100">
                 <form class="login100-form validate-form">
                     <span class="login100-form-logo">
-                        <i class="zmdi zmdi-landscape"></i>
+                        <i class="zmdi zmdi-pin"></i>
                     </span>
 
                     <span class="login100-form-title p-b-34 p-t-27">
@@ -60,7 +60,7 @@
 
 
                     <div class="container-login100-form-btn">
-                        <a class="login100-form-btn"" href=" /login">
+                        <a class="login100-form-btn" href=" /login">
                             Register
                         </a>
                     </div>
